 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/03/19:
   * Fixed some problems with toolbar sizing (Mark + thanks Julien Trolet)
     Toolbar.cc
*07/03/18:
   * Changed position remembering so it only remembers position relative to the
     current head (Mark)
     Remember.cc
   * Fixed problem with new mouse binding code when using emacs keychains (Mark)
     Keys.hh
*07/03/17:
   * Iconified, stuck windows weren't being moved to different workspaces (Mark)
     Screen.cc
*07/03/16:
   * Maximizing a window with aspect ratio requirements was making windows too
     large (thanks Tomas Janousek)
     Window.cc/hh WinClient.cc/hh
   * Added key command to open a custom menu file (thanks Matteo Galiazzo)
     - :CustomMenu /path/to/file
     FbCommands.cc/hh FbCommandFactory.cc
*07/03/11:
   * Fixed display bug with ParentRelative menu highlight (thanks Julien Trolet)
     FbTk/Menu.cc
*07/03/10:
   * Autogrouped windows weren't getting added to the workspace menu (Mark)
     Screen.cc
   * Changed default toolbar layer to DOCK, as a large window could render
     fluxbox useless to a new user otherwise (Mark)
     Toolbar.cc doc/asciidoc/fluxbox.txt
   * Fixed changing iconbar text padding requiring a toolbar refresh (Mark)
     IconbarTool.cc
   * Fixed stealing focus from unmanaged windows (Mark)
     fluxbox.cc
*07/03/07:
   * Fixed a little bug with reverting focus after closing menu (Mark)
     FbTk/Menu.cc
*07/03/06:
   * Changed some handling of focusing/raising transient windows (Mark)
     Window.cc FocusControl.cc
   * session.screen<N>.defaultDeco now allows same strings as apps file (Mark)
     Screen.cc/hh Window.cc Remember.cc/hh
*07/03/03:
   * Added typeahead support to menus (patch by Philipp Goedl, modified by Mark
     and Matteo Galiazzo)
     - Added new style item menu.frame.underlineColor: <color> for displaying
       matching items
     FbTk/Menu.cc/hh MenuItem.cc/hh MenuTheme.cc/hh Makefile.am and added